--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,1 +1,1 @@
-distributionUrl=https\://mirrors.cloud.tencent.com/gradle/gradle-8.8-bin.zi
+distributionUrl=https\://mirrors.cloud.tencent.com/gradle/gradle-8.8-bin.zip
